# Helix-Callosum

./: .gitignore  README.md  cellrix_manifest.json  pyproject.toml
callosum/: __init__.py  cellrix_bridge.py
callosum/cli/: cli.py  server.py  stats.py
callosum/common/: __init__.py  config.py  logging.py  tracing.py  utils.py
callosum/core/: headers.py
callosum/core/adapters/: __init__.py  anthropic.py  base.py  loader.py  openai.py  sglang.py  vllm.py
callosum/core/composite/: __init__.py  health_monitor.py  pool.py  router.py
callosum/core/economic/: __init__.py  profiler.py
callosum/core/iceberg/: __init__.py  barrier.py  compiler.py  rules.py
callosum/core/shadow/: __init__.py  radix_tree.py  tracker.py
callosum/core/vfd/: __init__.py  allocator.py  indexer.py  policies.py
callosum/gateway/: __init__.py  app.py  middleware.py
callosum/schemas/: __init__.py  cache.py  exceptions.py  prompt.py  request.py
config/: adapters.yaml  backends.yaml  scoring_rules.yaml
scripts/: setup.sh  test_endpoints.sh
tests/: conftest.py  test_adapters.py  test_composite.py  test_economic.py  test_iceberg.py  test_shadow.py  test_vfd.py
tests/integration/: test_integration.py
