[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-callosum"
version = "0.2.0"
description = "Helix-Callosum: Context Memory Allocator for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jason Milk" }]
keywords = ["ai", "agent", "llm", "kv-cache", "prefix-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    "aiosqlite>=0.20.0",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "typer>=0.25.0",
    "shellingham>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.11",
    "vcrpy>=6.0",
]


[project.entry-points."cellrix.bridge"]
callosum_dashboard = "callosum.cellrix_bridge:build_manifest"
[project.scripts]
callosum = "callosum.cli.cli:cli"

[tool.setuptools]
packages = { find = { where = ["."], include = ["callosum", "callosum.*"] } }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"